package linkedin

type Skill struct {
	Name string
}
